<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserUpdateActivity">

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textSize="@dimen/display_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/input_text_size"
        app:layout_constraintBottom_toTopOf="@+id/mail"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/updateName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1" />

    <EditText
        android:id="@+id/updateName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="@dimen/input_text_size"
        app:layout_constraintBottom_toTopOf="@+id/updateMail"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="@dimen/input_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/ICCard"
        app:layout_constraintEnd_toStartOf="@+id/updatePassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail"
        app:layout_constraintVertical_weight="1" />

    <EditText
        android:id="@+id/updatePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="@dimen/input_text_size"
        app:layout_constraintBottom_toTopOf="@+id/ICCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/updateMail"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:textSize="@dimen/input_text_size"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@+id/updateMail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_weight="1" />

    <EditText
        android:id="@+id/updateMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/input_text_size"
        app:layout_constraintBottom_toTopOf="@+id/updatePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mail"
        app:layout_constraintTop_toBottomOf="@+id/updateName"
        app:layout_constraintVertical_weight="1" />


    <Button
        android:id="@+id/icCardReader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/icCardReader"
        android:textSize="@dimen/display_text_size"
        app:layout_constraintBottom_toTopOf="@+id/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ICCard"
        app:layout_constraintVertical_weight="1" />


    <TextView
        android:id="@+id/ICCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:textSize="@dimen/input_text_size"
        app:layout_constraintBottom_toTopOf="@+id/icCardReader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updatePassword"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:ems="12"
        android:textSize="@dimen/input_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ICCard" />

</android.support.constraint.ConstraintLayout>